--- a/site/style.css
+++ b/site/style.css
@@ -184,10 +184,10 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .etpc-sand,.etpc-hover-sand:hover{color:#000!important;background-color:#fdf5e6!important}
 .etpc-teal,.etpc-hover-teal:hover{color:#fff!important;background-color:#009688!important}
 .etpc-yellow,.etpc-hover-yellow:hover{color:#000!important;background-color:#ffeb3b!important}
-.etpc-white,.etpc-hover-white:hover{color:#000!important;background-color:#fff!important}
+.etpc-white,.etpc-hover-white:hover{color:#000!important;background-color:#fff!important;}
 .etpc-black,.etpc-hover-black:hover{color:#fff!important;background-color:#000!important}
 .etpc-grey,.etpc-hover-grey:hover,.etpc-gray,.etpc-hover-gray:hover{color:#000!important;background-color:#9e9e9e!important}
-.etpc-light-grey,.etpc-hover-light-grey:hover,.etpc-light-gray,.etpc-hover-light-gray:hover{color:#000!important;background-color:#f1f1f1!important}
+.etpc-light-grey,.etpc-hover-light-grey:hover,.etpc-light-gray,.etpc-hover-light-gray:hover{color:#000!important;background-color:#f1f1f1!important;}
 .etpc-dark-grey,.etpc-hover-dark-grey:hover,.etpc-dark-gray,.etpc-hover-dark-gray:hover{color:#fff!important;background-color:#616161!important}
 .etpc-pale-red,.etpc-hover-pale-red:hover{color:#000!important;background-color:#ffdddd!important}
 .etpc-pale-green,.etpc-hover-pale-green:hover{color:#000!important;background-color:#ddffdd!important}
@@ -259,7 +259,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
     background-color: greenyellow;
     margin-left: 35%;
     font-family: raleway;
-    transition-duration: 0.4s;
+    -duration: 0.4s;
     cursor: pointer;
     margin-top: 6vh;
 }
@@ -270,13 +270,13 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 }
              
 .enviarPesquisa {
-    background-image: linear-gradient(to right, #0d3114 0%, #00cf3e  51%, #8fffbd  76%, rgb(202, 255, 204) 100%);
+    background-image: linear-gradient(to right, #0d3114 0%, #00cf3e  48%, #8fffbd  76%, rgb(202, 255, 204) 100%);
     margin-left: .1%;
     padding: 2% 8%;
     text-align: center;
     transition: 0.5s;
     background-size: 200% auto;
-    color: white;            
+    color: rgb(233, 233, 233);            
     cursor: pointer;
     box-shadow: 0 0 20px #eee;
     border-radius: 12px;
