--- a/site/resultado.css
+++ b/site/resultado.css
@@ -10,6 +10,16 @@
     margin-top: 19%;
 }
 
+.textoResposta{
+    position: fixed;
+    left: 104vh;
+    top: 24vh;
+    width: 84vh;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-word;
+}
+
 .boxResultado{
     background-color: #0CF25D;
     margin-left: -45%;
@@ -29,9 +39,10 @@
 }
 
 .comentario{
-    margin-left: 73%;
-    margin-top: 2%;
-    margin-bottom: -12%;
+    left: 104vh;
+    position: fixed;
+    display: inline-block;
+    top: 10vh;
 }
 
 .boxPontuacao{
@@ -69,24 +80,29 @@ body{
     text-align: center;
 }
 
-
 .bot {
     border: 6px;
     border-radius: 15px;
-    background-color: white;
+    background-color: rgb(209, 209, 209);
     color: black;
-    margin-top: 72vh;
+    position: fixed;
+    top: 62vh;
     padding: 2% 8%;
-    margin-left: 105.1%;
+    left: 147vh;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     transition-duration: .3s;
+    outline-style: dashed;
+    outline-width: 0px;
 }
 
 .bot:hover{
-    background-color: black;
+    background-color: #025951;
     color: white;
+    outline-width: 6px;
+    outline-style: solid;
+    outline-color: #0CF25D;
 }
 
 .refazerPesquisa {
@@ -94,18 +110,26 @@ body{
     border-radius: 15px;
     background-color: #0CF25D;
     color: black;
-    margin-left: 92%;
+    left: 134vh;
     text-align: center;
-    margin-top: 4vh;
+    top: 79vh;
+    position: fixed;
     padding: 2% 8%;
     text-decoration: none;
     white-space: nowrap;
     display: inline-block;
-    transition-duration: .3s;
+    transition-duration: .35s;
+    outline-style: none;
+    outline-width: 0px;
+    outline-style: dashed;
     width:  20vh;
 }
 
 .refazerPesquisa:hover{
-    background-color: black;
+    background-color: #025951;
     color: white;
+    outline-style: solid;
+    outline-width: 6px;
+    outline-color: rgb(136, 255, 255);
 }
+
