--- a/site/quiz.css
+++ b/site/quiz.css
@@ -7,7 +7,6 @@
     top: 5%;
 }
 
-.navegacao{}
 .painel{
     position: fixed;
     top: 45%;
@@ -61,9 +60,10 @@
     100% {opacity: 1;}
 }
 
-@keyframes desvanecer{
-    0%   {opacity: 1;}
-    100% {opacity: 0;}
+@keyframes clicadonav{
+    0%   {background-color: #265C4B;}
+    50%   {background-color: rgb(248, 252, 223);}
+    100% {background-color: #265C4B;}
 }
 
 .option:hover{
@@ -81,7 +81,9 @@
     position: fixed;
     font-family: 'Cabin', sans-serif;
     font-size: 2vh;
+    box-shadow: #172026 0px 5px;
     border-radius: 15px;
+    border: none;
     padding: 2.5% 10%;
     background-color: #9AEBA3;
     color: #172026;
@@ -94,6 +96,9 @@
     background-color: #9AEBA3;
     color: #172026;
     position: fixed;
+    box-shadow: #172026 0px 5px;
+    border-radius: 15px;
+    border: none;
     font-size: 2vh;
     font-family: 'Cabin', sans-serif;
     padding: 2.5% 10%;
@@ -106,6 +111,9 @@
 #finalizar{
     background-color: #9AEBA3;
     color: #172026;
+    box-shadow: #172026 0px 5px;
+    border-radius: 15px;
+    border: none;
     animation: aparecer .8s;
     font-family: 'Cabin', sans-serif;
     font-size: 2vh;
@@ -119,8 +127,9 @@
 
 
 #next:active{
-    background-color: #DAFDBA;
-    animation: clicado .2s;
+    animation: clicadonav .2s;
+    box-shadow: 0 5px #172026;
+    transform: translateY(8px);
 }
 
 #next:hover{
@@ -139,7 +148,15 @@
 }
 
 #prev:active{
-    background-color: aqua;
-    animation: clicado .2s;
+    background-color: #DAFDBA;
+    animation: clicadonav .2s;
+    box-shadow: 0 5px #172026;
+    transform: translateY(8px);
 }
 
+#finalizar:active{
+    background-color: #DAFDBA;
+    animation: clicadonav .2s;
+    box-shadow: 0 5px #172026;
+    transform: translateY(8px);
+}
