--- a/site/style.css
+++ b/site/style.css
@@ -1977,3 +1977,14 @@ a {
     color: greenyellow;
     background-color: rgb(0, 83, 0);
 }
+
+.mySlides{
+    height: 40%;
+    width: 40%;
+}
+
+.imagens{
+    
+    height: 20%;
+    width: 40%;
+}
