--- a/site/style.css
+++ b/site/style.css
@@ -1983,6 +1983,7 @@ a {
 .mySlides{
     height: 40%;
     width: 40%;
+    margin-left: 30%;
 }
 
 
@@ -1993,4 +1994,23 @@ a {
 
 .etpc-card{
     max-height: 25%;
+}
+
+
+#nextbt{
+    position: relative;
+    cursor: pointer;
+    margin-left: 7%;
+    border-radius: 25vh;
+    width: 10%;
+    font-family: 'Cabin', sans-serif;
+}
+
+#prevbt{
+    position: relative;
+    cursor: pointer;
+    margin-left: 35%;
+    border-radius: 25vh;
+    width: 10%;
+    font-family: 'Cabin', sans-serif;
 }
