--- a/site2.0/style.css
+++ b/site2.0/style.css
@@ -10,6 +10,19 @@ h2{
     left: 3%;
 }
 
+/* animações */
+@keyframes jumping {
+    from {transform: translateY(-15px);}
+    50% {transform: translateY(0);}
+    to {transform: translateY(-15px);}
+}
+
+@keyframes destaque_pagina{
+    from{opacity: 1;}
+    50%{opacity: 0.5;}
+    to{opacity: 1;}
+}
+
 /* css da nav bar*/
 #barra{
     position: fixed;
@@ -53,11 +66,11 @@ h2{
     position: absolute;
     right: 20%;
     top:30%;
-    transition: opacity 1s;
+    transition: transform 1s;
 }
 
 #imagem_globo:hover{
-    opacity: 0.8;
+    transform: scale(1.05);
 }
 
 /* css da tela dos nossos objetivos*/
@@ -233,10 +246,4 @@ h2{
     z-index: 3;
     cursor: pointer;
     animation: jumping 1s linear infinite;
-}
-
-@keyframes jumping {
-    from {transform: translateY(-15px);}
-    50% {transform: translateY(0);}
-    to {transform: translateY(-15px);}
 }
