--- a/site2.0/css/style.css
+++ b/site2.0/css/style.css
@@ -103,6 +103,7 @@ h2{
     font-style: normal;
     font-size: 20px;
 }
+
 /* css da tela dos pilares*/
 #pilares{
     position: absolute;
@@ -191,7 +192,7 @@ h2{
     color: #EBEBEB;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
-    font-size: 20px;
+    font-size: var(--tamanho_texto_funcionalidade);
 }
 
 #texto_equipe{
@@ -273,6 +274,7 @@ h2{
     --tamanho_texto_equipe : 20px;
     --top_texto_equipe : 230px;
     --tamanho_circulo_equipe : 20px;
+    --tamanho_texto_funcionalidade : 20px;
 }
 
 @media screen and (max-width : 700px){
@@ -284,6 +286,7 @@ h2{
         --tamanho_texto_equipe : 15px;
         --top_texto_equipe : 200px;
         --tamanho_circulo_equipe : 15px;
+        --tamanho_texto_funcionalidade : 14px;
     }
     
     #barra{
